<resources>
    <string name="app_name">Groc Mart</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registered_register_yourself">Not Registered?\nRegister Yourself</string>
    <string name="mobile_number">Enter Mobile number</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="Open_Drawer">Open Drawer</string>
    <string name="Close_drawer">Close Drawer</string>
    <string name="groc_mart">GROC MART</string>
    <string name="your_neighborhood_grocers">Your Neighborhood Grocers</string>
    <string name="welcome_to_ngroc_mart">WELCOME TO\nGROC MART</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Check</string>
    <string name="enter_pincode_here">Enter Pincode Here</string>
    <string name="enter_your_pincode_to_confirm_delivery_location">Enter your pincode to confirm delivery location:-</string>
    <string name="not_eligible_for_this_pincode"><u>Not Eligible for this pincode</u></string>
    <string name="offers">Offers</string>
    <string name="are_you_a_merchant_nget_your_company_registered">Are you a merchant?\nGet your company registered!</string>
    <string name="home">Home</string>
    <string name="spices">Spices</string>
    <string name="pulses">Pulses</string>
    <string name="dairy_products">Dairy products</string>
    <string name="home_care">Home Care</string>
    <string name="baby_care">Baby Care</string>
    <string name="beverages">Beverages</string>
    <string name="personal_care">Personal Care</string>
    <string name="snacks">Snacks</string>
    <string name="noodles">Noodles</string>
    <string name="oil">Oil</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
</resources>