<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hOme"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/spices"
            android:title="@string/spices"/>
        <item
            android:id="@+id/pulses"
            android:title="@string/pulses"/>
        <!--<item
            android:id="@+id/rice"
            android:title="Rice"/>-->
        <item
            android:id="@+id/dairy"
            android:title="@string/dairy_products"/>
        <item
            android:id="@+id/hCare"
            android:title="@string/home_care"/>
        <item
            android:id="@+id/bCare"
            android:title="@string/baby_care"/>
        <item
            android:id="@+id/beverages"
            android:title="@string/beverages"/>
        <item
            android:id="@+id/pCare"
            android:title="@string/personal_care"/>
        <item
            android:id="@+id/snacks"
            android:title="@string/snacks"/>
        <item
            android:id="@+id/noodles"
            android:title="@string/noodles"/>
        <item
            android:id="@+id/oil"
            android:title="@string/oil"/>
        <item
            android:id="@+id/about"
            android:title="@string/about_app"
            android:icon="@drawable/about"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>
</menu>