<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutForMobileSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.dsc.grocerymanagement.activities.PhoneLoginActivity">

    <EditText
        android:id="@+id/MobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/text_boundary_background"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="3dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="14"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRequestOtp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/request_otp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterOtpMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_boundary_background"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLoginMobile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/Login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>