<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_scrollFlags="scroll|enterAlways"
                android:background="#000"
                app:cardCornerRadius="15dp">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:minHeight="?attr/actionBarSize"
                app:titleTextColor="#fff"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:background="#fff">

                <EditText
                    android:id="@+id/etPin"
                    android:layout_width="185dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/text_boundary_background"
                    android:hint="@string/enter_pincode_here"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textColor="#0A3D62"
                    android:textColorHint="#9F000000"
                    android:textSize="19sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/offers"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_border"
                    android:layout_toEndOf="@id/etPin"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/offer"/>

                <Button
                    android:id="@+id/btnPin"
                    android:layout_width="205dp"
                    android:layout_height="41dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-1dp"
                    android:layout_toEndOf="@id/etPin"
                    android:visibility="gone"
                    android:background="@drawable/button_border"
                    android:paddingVertical="5dp"
                    android:text="@string/check"
                    android:textColor="#0A3D62"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPinResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/not_eligible_for_this_pincode"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:layout_below="@id/etPin"
                    android:textSize="16sp" />
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <FrameLayout
            android:id="@+id/FrameLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NavigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>